@startuml ICH-Pendidikan ERD
' =============================================
' ERD ICH-Pendidikan — ICH Pendidikan App
' Mencakup seluruh tabel yang ada di database
' =============================================

skinparam linetype ortho
skinparam entity {
  BackgroundColor #FAFAFA
  BorderColor #555555
  FontSize 12
}
skinparam package {
  BackgroundColor #F0F4FF
  BorderColor #3366CC
  FontSize 13
  FontStyle bold
}

hide empty members

' =============================================
' PACKAGE: User Management
' =============================================
package "User Management" #EAF0FB {

  entity "users" as users {
    * user_id : BIGINT <<PK>>
    --
    * name : VARCHAR
    * email : VARCHAR <<UNIQUE>>
    * no_hp : VARCHAR
    * password : VARCHAR
    * status : ENUM(active, inactive)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "roles" as roles {
    * role_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    * role_name : ENUM(Admin, Guest, Student,\nGuru, Guru Ngaji,\nKepala Sekolah, Kepala Yayasan,\nOrang Tua)
    description : VARCHAR
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "admins" as admins {
    * admin_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    NIP : VARCHAR <<UNIQUE, nullable>>
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "teachers" as teachers {
    * teacher_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    * NIP : VARCHAR <<UNIQUE>>
    * tipe : ENUM(Guru TK, Guru Ngaji)
    subject : VARCHAR
    * hire_date : DATE
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "religious_teachers" as religious_teachers {
    * religious_teacher_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    * NIP : VARCHAR <<UNIQUE>>
    * tipe : ENUM(Guru Quran, Guru Iqra)
    * hire_date : DATE
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "foundation_heads" as foundation_heads {
    * principal_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    NIP : VARCHAR <<UNIQUE, nullable>>
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: Siswa & Kelas
' =============================================
package "Siswa & Kelas" #EAFBEA {

  entity "classes" as classes {
    * class_id : BIGINT <<PK>>
    --
    homeroom_teacher_id : BIGINT <<FK, nullable>>
    * nama_kelas : VARCHAR
    * nama_ruangan : VARCHAR
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "students" as students {
    * student_id : BIGINT <<PK>>
    --
    class_id : BIGINT <<FK>>
    * user_id : BIGINT <<FK>>
    * nama_siswa : VARCHAR
    NIS : VARCHAR <<UNIQUE>>
    * jenis_kelamin : ENUM(L, P)
    * tanggal_lahir : DATE
    * tempat_lahir : VARCHAR
    * nama_ayah : VARCHAR
    * nama_ibu : VARCHAR
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "student_attendance" as student_attendance {
    * student_attendance_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    teacher_id : BIGINT <<FK, nullable>>
    * status : ENUM(izin, sakit, tanpa keterangan)
    * created_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: Mata Pelajaran
' =============================================
package "Mata Pelajaran" #F5EAFB {

  entity "subjects" as subjects {
    * subject_id : BIGINT <<PK>>
    --
    * subject_name : VARCHAR
    description : VARCHAR
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "subject_teachers" as subject_teachers {
    * subject_teacher_id : BIGINT <<PK>>
    --
    * teacher_id : BIGINT <<FK>>
    * subject_id : BIGINT <<FK>>
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "students_grades" as students_grades {
    * penilaian_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * teacher_id : BIGINT <<FK>>
    * class_id : BIGINT <<FK>>
    * subject_teacher_id : BIGINT <<FK>>
    * grades : DECIMAL(5,2)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: PPDB
' =============================================
package "PPDB" #FFF8EA {

  entity "registrations" as registrations {
    * registration_id : BIGINT <<PK>>
    --
    * user_id : BIGINT <<FK>>
    * jenis_pendaftaran : ENUM(TK, Mengaji)
    * nama_siswa : VARCHAR
    * tempat_lahir : VARCHAR
    * tanggal_lahir : DATE
    * jenis_kelamin : ENUM(L, P)
    * alamat : TEXT
    anak_ke : TINYINT <<nullable>>
    ukuran_baju : ENUM(S, M, L) <<nullable>>
    * nama_ayah : VARCHAR
    tempat_lahir_ayah : VARCHAR <<nullable>>
    tanggal_lahir_ayah : DATE <<nullable>>
    alamat_ayah : TEXT <<nullable>>
    pendidikan_ayah : VARCHAR <<nullable>>
    pekerjaan_ayah : VARCHAR <<nullable>>
    no_telp_ayah : VARCHAR <<nullable>>
    * nama_ibu : VARCHAR
    tempat_lahir_ibu : VARCHAR <<nullable>>
    tanggal_lahir_ibu : DATE <<nullable>>
    alamat_ibu : TEXT <<nullable>>
    pekerjaan_ibu : VARCHAR <<nullable>>
    pendidikan_ibu : VARCHAR <<nullable>>
    no_telp_ibu : VARCHAR <<nullable>>
    * status : ENUM(accepted, rejected, pending)
    rejection_reason : TEXT <<nullable>>
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "registration_fees" as registration_fees {
    * registration_fee_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * total_jumlah : INT
    * status : ENUM(unpaid, installments, paid)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "fee_installments" as fee_installments {
    * installment_id : BIGINT <<PK>>
    --
    * registration_fee_id : BIGINT <<FK>>
    * jumlah : INT
    * tanggal_jatuh_tempo : DATETIME
    * status : ENUM(unpaid, paid, overdue)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "registration_transactions" as registration_transactions {
    * registration_transaction_id : BIGINT <<PK>>
    --
    * registration_fee_id : BIGINT <<FK>>
    approved_by : BIGINT <<FK → admins, nullable>>
    * payment_date : DATETIME
    * jumlah_bayar : INT
    nama_bank : VARCHAR
    * gambar_bukti_pembayaran : VARCHAR
    * payment_category : ENUM(full, installment)
    * status : ENUM(approved, rejected, pending)
    rejection_reason : TEXT <<nullable>>
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "registration_settings" as registration_settings {
    * id : BIGINT <<PK>>
    --
    * is_registration_period : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: SPP
' =============================================
package "SPP" #EAFBFB {

  entity "spp_invoices" as spp_invoices {
    * invoice_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * tanggal_tahun : DATE
    * jumlah : INT
    * jatuh_tempo : DATE
    * status : ENUM(unpaid, paid, pending,\ncancelled, overdue)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "spp_payments" as spp_payments {
    * payment_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * invoice_id : BIGINT <<FK>>
    approved_by : BIGINT <<FK → users, nullable>>
    * payment_date : DATETIME
    * jumlah_bayar : INT
    * nama_bank : VARCHAR
    * gambar_bukti_pembayaran : VARCHAR
    * status : ENUM(unpaid, paid, pending,\ncancelled, overdue)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: Tabungan Siswa
' =============================================
package "Tabungan Siswa" #FBEAEA {

  entity "saving_ledgers" as saving_ledgers {
    * ledger_id : BIGINT <<PK>>
    --
    * teacher_id : BIGINT <<FK>>
    * ledger_name : VARCHAR
    * academic_year : DATE
    * opening_date : DATE
    * opening_balance : INT
    * total_balance : INT
    * status : ENUM(Active, Closed)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "student_passbooks" as student_passbooks {
    * passbook_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * ledger_id : BIGINT <<FK>>
    * opening_date : DATE
    * opening_balance : INT
    * current_balance : INT
    passbook_file : VARCHAR
    last_update : DATETIME
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "saving_transactions" as saving_transactions {
    * transaction_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * ledger_id : BIGINT <<FK>>
    * passbook_id : BIGINT <<FK>>
    * transaction_date : DATETIME
    * transaction_type : VARCHAR
    * amount : INT
    description : VARCHAR
    * transaction_number : VARCHAR <<UNIQUE>>
    last_update : DATETIME
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: Absensi Guru (Geofencing)
' =============================================
package "Absensi Guru" #F0FFF0 {

  entity "attendance_records" as attendance_records {
    * attendance_record_id : BIGINT <<PK>>
    --
    teacher_id : BIGINT <<FK, nullable>>
    religious_teacher_id : BIGINT <<FK, nullable>>
    check_in_time : DATETIME
    check_in_latitude : DECIMAL(10,7)
    check_in_longitude : DECIMAL(10,7)
    check_in_accuracy : VARCHAR
    selfie_path : VARCHAR <<nullable>>
    is_within_geofence : ENUM(ya, tidak)
    * attendance_status : ENUM(Masuk, Izin, Sakit)
    check_out_time : DATETIME
    check_out_latitude : DECIMAL(10,7)
    check_out_longitude : DECIMAL(10,7)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "geofence_zones" as geofence_zones {
    * geofence_zone_id : BIGINT <<PK>>
    --
    * center_latitude : DECIMAL(10,7)
    * center_longitude : DECIMAL(10,7)
    * radius_meter : DECIMAL(10,2)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "attendance_settings" as attendance_settings {
    * attendance_setting_id : BIGINT <<PK>>
    --
    * setting_key : CHAR(100)
    * setting_value : CHAR(255)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' PACKAGE: Sistem Raport
' =============================================
package "Sistem Raport" #FBEAEA {

  entity "academic_periods" as academic_periods {
    * period_id : BIGINT <<PK>>
    --
    * tahun_ajaran : VARCHAR
    * semester : ENUM(1, 2)
    * tanggal_mulai : DATE
    * tanggal_selesai : DATE
    * is_active : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    ..
    UNIQUE(tahun_ajaran, semester)
  }

  entity "student_report_cards" as student_report_cards {
    * report_card_id : BIGINT <<PK>>
    --
    * student_id : BIGINT <<FK>>
    * period_id : BIGINT <<FK>>
    * class_id : BIGINT <<FK>>
    * homeroom_teacher_id : BIGINT <<FK>>
    * status : ENUM(draft, submitted, approved)
    approved_by : BIGINT <<FK, nullable>>
    approved_at : TIMESTAMP
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    ..
    UNIQUE(student_id, period_id)
  }

  entity "narrative_assessments" as narrative_assessments {
    * narrative_id : BIGINT <<PK>>
    --
    * report_card_id : BIGINT <<FK>>
    * kategori : ENUM(intrakurikuler, kokurikuler)
    * judul : VARCHAR
    * isi_naratif : TEXT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    ..
    UNIQUE(report_card_id, judul)
  }

  entity "narrative_photos" as narrative_photos {
    * photo_id : BIGINT <<PK>>
    --
    * narrative_id : BIGINT <<FK>>
    * photo_path : VARCHAR
    caption : VARCHAR
    * urutan : INT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "development_categories" as development_categories {
    * category_id : BIGINT <<PK>>
    --
    parent_id : BIGINT <<FK self, nullable>>
    * nama : VARCHAR
    * urutan : INT
    * usia_min : INT
    * usia_max : INT
    * is_active : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "student_checklist_assessments" as student_checklist_assessments {
    * checklist_id : BIGINT <<PK>>
    --
    * report_card_id : BIGINT <<FK>>
    * category_id : BIGINT <<FK>>
    * status : ENUM(BM, MM, SM)
    catatan : TEXT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    ..
    UNIQUE(report_card_id, category_id)
  }

  entity "physical_measurements" as physical_measurements {
    * measurement_id : BIGINT <<PK>>
    --
    * report_card_id : BIGINT <<FK>>
    tinggi_badan : DECIMAL(5,2)
    berat_badan : DECIMAL(5,2)
    lingkar_kepala : DECIMAL(5,2)
    tanggal_ukur : DATE
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "health_conditions" as health_conditions {
    * health_id : BIGINT <<PK>>
    --
    * report_card_id : BIGINT <<FK>>
    * pendengaran : VARCHAR
    * penglihatan : VARCHAR
    catatan_tambahan : TEXT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }
}

' =============================================
' RELATIONSHIPS — User Management
' =============================================
users ||--o{ roles                : ""
users ||--o| admins               : ""
users ||--o| teachers             : ""
users ||--o| religious_teachers   : ""
users ||--o| foundation_heads     : ""
users ||--o{ registrations        : ""

' =============================================
' RELATIONSHIPS — Siswa & Kelas
' =============================================
teachers ||--o| classes            : "wali kelas"
users    ||--o{ students           : ""
classes  ||--o{ students           : ""
students ||--o{ student_attendance : ""
teachers ||--o{ student_attendance : ""

' =============================================
' RELATIONSHIPS — Mata Pelajaran
' =============================================
teachers         ||--o{ subject_teachers : ""
subjects         ||--o{ subject_teachers : ""
students         ||--o{ students_grades  : ""
teachers         ||--o{ students_grades  : ""
classes          ||--o{ students_grades  : ""
subject_teachers ||--o{ students_grades  : ""

' =============================================
' RELATIONSHIPS — PPDB
' =============================================
students             ||--o{ registration_fees         : ""
registration_fees    ||--o{ fee_installments           : ""
registration_fees    ||--o{ registration_transactions  : ""
admins               ||--o{ registration_transactions  : ""

' =============================================
' RELATIONSHIPS — SPP
' =============================================
students     ||--o{ spp_invoices  : ""
spp_invoices ||--o{ spp_payments  : ""
students     ||--o{ spp_payments  : ""
users        ||--o{ spp_payments  : ""

' =============================================
' RELATIONSHIPS — Tabungan
' =============================================
teachers          ||--o{ saving_ledgers      : ""
students          ||--o{ student_passbooks   : ""
saving_ledgers    ||--o{ student_passbooks   : ""
students          ||--o{ saving_transactions : ""
saving_ledgers    ||--o{ saving_transactions : ""
student_passbooks ||--o{ saving_transactions : ""

' =============================================
' RELATIONSHIPS — Absensi Guru
' =============================================
teachers           ||--o{ attendance_records : ""
religious_teachers ||--o{ attendance_records : ""

' =============================================
' RELATIONSHIPS — Sistem Raport
' =============================================
academic_periods ||--o{ student_report_cards           : ""
students         ||--o{ student_report_cards           : ""
classes          ||--o{ student_report_cards           : ""
teachers         ||--o{ student_report_cards           : ""
users            ||--o{ student_report_cards           : ""

student_report_cards      ||--o{ narrative_assessments        : ""
narrative_assessments     ||--o{ narrative_photos             : ""
student_report_cards      ||--o{ student_checklist_assessments : ""
development_categories    ||--o{ student_checklist_assessments : ""
development_categories    ||--o{ development_categories        : ""
student_report_cards      ||--o| physical_measurements        : ""
student_report_cards      ||--o| health_conditions            : ""

@enduml
